--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,51 +1,40 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello
+  name: nginx
+  labels:
+    app: nginx
 spec:
   replicas: 2
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 100%
   selector:
     matchLabels:
-      app: hello
+      app: nginx
   template:
     metadata:
       labels:
-        app: hello
+        app: nginx
     spec:
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions: [{ key: app, operator: In, values: [hello] }]
-            topologyKey: "kubernetes.io/hostname"
       containers:
-      - name: hello-from
-        image: pbitty/hello-from:latest
+      - name: nginx
+        image: nginx:latest
+        resources:
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
         ports:
-          - name: http
-            containerPort: 80
-      terminationGracePeriodSeconds: 1
-
+        - containerPort: 80
 
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello
+  name: nginx
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
-    app: hello
+    app: nginx
   ports:
-    - protocol: TCP
-      nodePort: 31000
-      port: 80
-      targetPort: http 
-
-
+  - port: 8080
+    targetPort: 80
 
