--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         image: nginx:latest
         resources:
           limits:
-            memory: "256Mi"
+            memory: "512Mi"
             cpu: "500m"
         ports:
         - containerPort: 80
@@ -31,10 +31,11 @@ kind: Service
 metadata:
   name: nginx
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: nginx
   ports:
-  - port: 8080
-    targetPort: 80
-
+    - protocol: TCP
+      nodePort: 31000
+      port: 80
+      targetPort: http 
